[metadata]
name = backslash
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
description = Client library for the Backslash test reporting service
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = http://github.com/getslash/backslash-python/


[extras]
testing =
    slash>=1.5.0
    Flask
    Flask-Loopback
    pylint~=1.7.0
    pytest; python_version < '3.0'
    pytest>4.0; python_version >= '3.0'
    pytest-cov<2.6; python_version < '3.0'
    pytest-cov>=2.6; python_version >= '3.0'
    URLObject
    weber-utils

sentry =
    raven

[tool:pytest]
testpaths = tests
